updates about section and two more projects

--- a/index.html
+++ b/index.html
@@ -165,22 +165,36 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>About</h2>
+                    <h2>My Journey into Tech</h2>
                     <hr class="star-light">
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-4 col-lg-offset-2">
-                  <img src="img/profile.jpg" class="img-responsive" alt="">
-                </div>
                 <div class="col-lg-4">
-                    <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
-                </div>
-                <div class="col-lg-8 col-lg-offset-2 text-center">
+                  <img src="img/profile.jpg" class="img-responsive" alt="">
+                  <div class="text-center">
                     <a href="mailto:james.p.anderson16@gmail.com?subject=Reaching%20Out&body=How%20are%20you" class="btn btn-lg btn-outline">
                         <i class="fa fa-envelope"></i> Drop me a line
                     </a>
+                  </div>
                 </div>
+                <div class="col-lg-8">
+                    <p>I'm a software developer.</p>
+                    <p>I currently live in Colorado but I'm originally from Oklahoma and I've been a fair few places in between.</p>
+                    <p>My first foray into tech was way back in the MySpace days. I loved tinkering with my profile and adding horrible background music for all to enjoy once they landed on my page. It was fun, but I never really considered it a career. Fast-forward a good few years. After finishing university in Switzerland, I relocated to NYC and found myself working as a recruiter for C# and C++ developers. I spent my days making cold calls and trying to sell candidates whose skill sets I didn't fully comprehend.</p>
+                    <p>"We're a haberdashery, what exactly would we need a C# developer for, James?"</p>
+                    <p>"Well Bob, if you have to ask then you are <i>definitely</i> in need of one."</p>
+                    <p>Again, the tech industry was knocking at my door but I didn't get it. The year was 2008, and I had front row seats as things came tumbling down. I decided to pivot, and got myself certified as a teacher from the University of Cambridge. I was on the next flight to Moscow, Russia where I spent my next three years working as teacher. As my career progressed, I took a position in Dusseldorf, Germany as a linguistic consultant and later, on to Saudi Arabia as an advanced teacher.</p>
+                    <p>For those of you who've never been to Saudi Arabia, their (web) infrastructure is somewhat lacking. One night, I fancied myself a pizza and for the life of me, could not find a single website or phone number to get one. I began to wonder to myself, <i>really? how hard can it be to make a website?</i> So, I decided to give it a try.</p>
+                    <p>I did a few tutorials and started dabbling and fell in love with code. It finally dawned on me that this could be real career. So, after looking for the longest, most-intense code school I could find, I got accepted to the Turing School in Denver and packed my bags.</p>
+                    <p>*Pro Tip* Don't tell your significant other you're quitting your job and moving around the world 6 weeks after having a child.</p>
+                    <p>I spent seven long months in a basement, putting in 12-14 hour days to learn the craft. However, I now have a career that I love and cannot imagine myself ever doing anything else.</p>
+                </div>
+                <!-- <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <a href="mailto:james.p.anderson16@gmail.com?subject=Reaching%20Out&body=How%20are%20you" class="btn btn-lg btn-outline">
+                        <i class="fa fa-envelope"></i> Drop me a line
+                    </a>
+                </div> -->
             </div>
         </div>
     </section>
@@ -324,18 +338,16 @@
                             <h2>Swept Away</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/swept-away.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <p>Swept Away is an app that was inspired by those diligent civil servants handing out parking tickets. It is a directory for the street sweeping routes and schedules of the city of Boston. Once logging in with their Google account, users can visit the index page which displays every route, its scheduled day and time, and which side of the street will be swept. Alternatively,
+                            they can search by street name limiting the results. After clicking on a individual route, users can view a Google map rendering the specifics of that route. </p>
+                            <p>This was a solo project that uses a Ruby 2.4/Rails 5 backend and the Faraday gem to hit the City of Boston's API. It makes use of Google's OAuth service to log in and Google Maps to provide a visual representation of routes. The Kaminari gem was utilized for pagination and Javascript/jQuery was implemented for the filter function. A PostgreSQL database was used to store user data and tokens. It was completed in a four-day sprint in April of 2017. Future iterations will include a mailer to provide users with reminders.</p><br>
                             <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
+                                <li>
+                                    <strong><a href="https://swept-away.herokuapp.com/">Production link</a>
                                     </strong>
                                 </li>
-                                <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
-                                </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
+                                <li>
+                                    <strong><a href="https://github.com/janderson16/swept_away">Repo</a>
                                     </strong>
                                 </li>
                             </ul>
@@ -397,16 +409,12 @@
                             <img src="img/portfolio/poghogs_1.png" class="img-responsive img-centered" alt="">
                             <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
                             <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
+                                <li>
+                                    <strong><a href="https://poghogs.herokuapp.com/">Production link</a>
                                     </strong>
                                 </li>
-                                <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
-                                </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
+                                <li>
+                                    <strong><a href="https://github.com/janderson16/pog_hogs">Repo</a>
                                     </strong>
                                 </li>
                             </ul>
@@ -434,16 +442,12 @@
                             <img src="img/portfolio/howler.png" class="img-responsive img-centered" alt="">
                             <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
                             <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
+                                <li>
+                                    <strong><a href="https://info-is-everywhere.herokuapp.com/">Production link</a>
                                     </strong>
                                 </li>
-                                <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
-                                </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
+                                <li>
+                                    <strong><a href="https://github.com/janderson16/howler">Repo</a>
                                     </strong>
                                 </li>
                             </ul>
