rounded pic corners

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-4">
-                  <img src="img/profile.jpg" class="img-responsive" alt="">
+                  <img src="img/profile.jpg" class="img-responsive rounded" alt="">
                   <div class="text-center">
                     <a href="mailto:james.p.anderson16@gmail.com?subject=Reaching%20Out&body=How%20are%20you" class="btn btn-lg btn-outline">
                         <i class="fa fa-envelope"></i> Drop me a line
