updated howler link

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <iframe src="https://resume.creddle.io/embed/6woabnpfnu4"
-            width="850" height="1100" seamless></iframe> 
+            width="850" height="1100" seamless></iframe>
           </div>
         </div>
       </div>
@@ -277,6 +277,186 @@
         <div class="footer-above">
             <div class="container">
                 <div class="row">
+                    <!-- <div class="footer-col col-md-6">
+                      <script src="https://www.amcharts.com/lib/3/ammap.js" type="text/javascript"></script>
+                      <script src="https://www.amcharts.com/lib/3/maps/js/worldHigh.js" type="text/javascript"></script>
+                      <script src="https://www.amcharts.com/lib/3/themes/dark.js" type="text/javascript"></script>
+                      <div id="mapdiv" style="width: 450px; height: 225px;"></div>
+                      <script type="text/javascript">
+                      var map = AmCharts.makeChart("mapdiv",{
+                      type: "map",
+                      theme: "dark",
+                      projection: "mercator",
+                      panEventsEnabled : true,
+                      backgroundColor : "#535364",
+                      backgroundAlpha : 1,
+                      zoomControl: {
+                      zoomControlEnabled : true
+                      },
+                      dataProvider : {
+                      map : "worldHigh",
+                      getAreasFromMap : true,
+                      areas :
+                      [
+                      	{
+                      		"id": "BE",
+                      		"showAsSelected": true
+                      	},
+                      	{
+                      		"id": "BG",
+                      		"showAsSelected": true
+                      	},
+                      	{
+                      		"id": "HR",
+                      		"showAsSelected": true
+                      	},
+                      	{
+                      		"id": "CZ",
+                      		"showAsSelected": true
+                      	},
+                      	{
+                      		"id": "FR",
+                      		"showAsSelected": true
+                      	},
+                      	{
+                      		"id": "DE",
+                      		"showAsSelected": true
+                      	},
+                      	{
+                      		"id": "GR",
+                      		"showAsSelected": true
+                      	},
+                      	{
+                      		"id": "HU",
+                      		"showAsSelected": true
+                      	},
+                      	{
+                      		"id": "MC",
+                      		"showAsSelected": true
+                      	},
+                      	{
+                      		"id": "ME",
+                      		"showAsSelected": true
+                      	},
+                      	{
+                      		"id": "NL",
+                      		"showAsSelected": true
+                      	},
+                      	{
+                      		"id": "PL",
+                      		"showAsSelected": true
+                      	},
+                      	{
+                      		"id": "RU",
+                      		"showAsSelected": true
+                      	},
+                      	{
+                      		"id": "SK",
+                      		"showAsSelected": true
+                      	},
+                      	{
+                      		"id": "ES",
+                      		"showAsSelected": true
+                      	},
+                      	{
+                      		"id": "CH",
+                      		"showAsSelected": true
+                      	},
+                      	{
+                      		"id": "TR",
+                      		"showAsSelected": true
+                      	},
+                      	{
+                      		"id": "GB",
+                      		"showAsSelected": true
+                      	},
+                      	{
+                      		"id": "CA",
+                      		"showAsSelected": true
+                      	},
+                      	{
+                      		"id": "CU",
+                      		"showAsSelected": true
+                      	},
+                      	{
+                      		"id": "MX",
+                      		"showAsSelected": true
+                      	},
+                      	{
+                      		"id": "US",
+                      		"showAsSelected": true
+                      	},
+                      	{
+                      		"id": "BH",
+                      		"showAsSelected": true
+                      	},
+                      	{
+                      		"id": "KH",
+                      		"showAsSelected": true
+                      	},
+                      	{
+                      		"id": "HK",
+                      		"showAsSelected": true
+                      	},
+                      	{
+                      		"id": "ID",
+                      		"showAsSelected": true
+                      	},
+                      	{
+                      		"id": "JP",
+                      		"showAsSelected": true
+                      	},
+                      	{
+                      		"id": "LB",
+                      		"showAsSelected": true
+                      	},
+                      	{
+                      		"id": "MY",
+                      		"showAsSelected": true
+                      	},
+                      	{
+                      		"id": "PH",
+                      		"showAsSelected": true
+                      	},
+                      	{
+                      		"id": "QA",
+                      		"showAsSelected": true
+                      	},
+                      	{
+                      		"id": "SA",
+                      		"showAsSelected": true
+                      	},
+                      	{
+                      		"id": "SG",
+                      		"showAsSelected": true
+                      	},
+                      	{
+                      		"id": "KR",
+                      		"showAsSelected": true
+                      	},
+                      	{
+                      		"id": "TH",
+                      		"showAsSelected": true
+                      	},
+                      	{
+                      		"id": "AE",
+                      		"showAsSelected": true
+                      	}
+                      ]
+                      },
+                      areasSettings : {
+                      autoZoom : true,
+                      color : "#B4B4B7",
+                      colorSolid : "#84ADE9",
+                      selectedColor : "#84ADE9",
+                      outlineColor : "#666666",
+                      rollOverColor : "#9EC2F7",
+                      rollOverOutlineColor : "#000000"
+                      }
+                      });
+                      </script>
+
+                    </div> -->
                     <div class="footer-col col-md-4">
                     </div>
                     <div class="footer-col col-md-4">
@@ -443,7 +623,7 @@
                             <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
                             <ul class="list-inline item-details">
                                 <li>
-                                    <strong><a href="https://info-is-everywhere.herokuapp.com/">Production link</a>
+                                    <strong><a href="https://the-howler.herokuapp.com/">Production link</a>
                                     </strong>
                                 </li>
                                 <li>
