adds project info for howler

--- a/index.html
+++ b/index.html
@@ -620,7 +620,8 @@
                             <h2>Howler</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/howler.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <p>The Howler app was designed to allow users to analyze the sentiment of any text using scores of 13 different tones. If users sign in with their Twitter account, they can save their analysis and compare multiple texts.</p>
+                            <p>This was a five-person team, brownfield project that uses a Ruby 2.4/Rails 5 backend combined with JavaScript, jQuery, and AJAX calls to render charts, dynamically edit, and compare data. It makes use of Twitter's OAuth service to log in and a PostgreSQL database to store user data. The Watson API is implemented to provide tone analysis as well as Highcharts to render data in a user-friendly manner. It was completed in a two four-day sprints in May of 2017.</p><br>
                             <ul class="list-inline item-details">
                                 <li>
                                     <strong><a href="https://the-howler.herokuapp.com/">Production link</a>
