--- a/index.html
+++ b/index.html
@@ -587,7 +587,8 @@
                             <h2>PogHogs</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/poghogs_1.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <p>The PogHogs app was built as an online retailer for the 90's pog craze. Users have the ability to leave reviews about products while admins can manage stock levels, order/status and user priveleges .</p>
+                            <p>This was a three-person team project that uses a Ruby 2.4/Rails 5 backend. Products are handled in a PostgreSQL database with images on paperclip.  The app utilizes the Bootstrap library for styling. It was completed in a two-week sprint in February of 2017.</p><br>
                             <ul class="list-inline item-details">
                                 <li>
                                     <strong><a href="https://poghogs.herokuapp.com/">Production link</a>
