minor pog hogs tweaks

--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@
                             <h2>PogHogs</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/poghogs_1.png" class="img-responsive img-centered" alt="">
-                            <p>The PogHogs app was built as an online retailer for the 90's pog craze. Users have the ability to leave reviews about products while admins can manage stock levels, order/status and user priveleges .</p>
+                            <p>The PogHogs app was built as an online marketplace for the 90's pog craze. Users have the ability to add items to cart and purchase as well as leave reviews about products they've bought while admins can manage stock levels, order/status and user priveleges .</p>
                             <p>This was a three-person team project that uses a Ruby 2.4/Rails 5 backend. Products are handled in a PostgreSQL database with images on paperclip.  The app utilizes the Bootstrap library for styling. It was completed in a two-week sprint in February of 2017.</p><br>
                             <ul class="list-inline item-details">
                                 <li>
