--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <div class="intro-text">
                         <h1 class="name">James Anderson</h1>
                         <hr class="star-light">
-                        <span class="skills">Software Developer - Teacher - Traveler</span>
+                        <span class="skills">Software Developer</span>
                     </div>
                 </div>
             </div>
