--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
                             <img src="img/portfolio/poghogs-admin.png" class="img-responsive img-centered" alt="">
                             <p>The PogHogs app was built as an online marketplace for the 90's pog craze. Users have the ability to add items to cart and purchase as well as leave reviews about products they've bought while admins can manage stock levels, order/status and user priveleges .</p>
                             <p>This was a three-person team project that uses a Ruby 2.4/Rails 5 backend. Products are handled in a PostgreSQL database with images on paperclip.  The app utilizes the Bootstrap library for styling. It was completed in a two-week sprint in February of 2017.</p><br>
-                            <ul class="list-inline item-details">
+                            <m4ul class="list-inline item-details">
                                 <li>
                                     <strong><a href="https://poghogs.herokuapp.com/">Production link</a>
                                     </strong>
@@ -691,7 +691,7 @@
                             <hr class="star-primary">
                             <img src="img/portfolio/urlockbox.png" class="img-responsive img-centered" alt="">
                             <p>The URLockbox is an app for tracking your favorite links. It utilizes BCrypt which requires users to create an account with their email address and a password in order to keep track of their links. Once signed in, users must enter a valid URL (https://www.google.com rather than google.com) and a user-chosen title (cannot be blank) to save. Links have an 'unread' status by default but can be changed using the 'Mark as Read/Mark as Unread' buttons. Users can filter their links in one of two ways. The first is to enter text into the filter box, as a user types, their results list will shorten with each key typed. The second is to click on the "Only Read Links" or "Only Unread Links" buttons which limit results to the read status of each link. This app also works in conjunction with HotReads, which tracks the most popular links across all users in the database.</p><br>
-                            <p>This was a solo project that uses a Ruby 2.4/Rails 5 backend and ansynchronous JavaScript to provide a seemless user experience without needing to reload. It makes use of the BCrypt gem for authentication and authorization as well as the validate_url gem to ensure the validity of web addresses. The sister app (HotReads) also employs the rack_cors gem in order to overcome the single origin policy during AJAX calls. It was completed in a two-day sprint in June of 2017.</p><br>
+                            <p>This was a solo project that uses a Ruby 2.4/Rails 5 backend and ansynchronous JavaScript to provide a seemless user experience without needing to reload. It makes use of the BCrypt gem for authentication and authorization as well as the validate_url gem to ensure the validity of web addresses. The sister app (HotReads) also employs the rack_cors gem in order to overcome the same origin policy during AJAX calls. It was completed in a two-day sprint in June of 2017.</p><br>
                             <h4>JAZZY UI COMING SOON!</h4>
                             <ul class="list-inline item-details">
                                 <li>
