change contact info

--- a/index.html
+++ b/index.html
@@ -211,9 +211,19 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
+                  <h4>Hit me up!</h4>
+                  <p>I'm always up for a coffee and discuss current projects</p>
+                  <div class="col-lg-4">
+                    <img src="img/profile.jpg" class="img-rounded img-responsive" alt="">
+                    <div class="text-center">
+                      <a href="mailto:james.p.anderson16@gmail.com?subject=Reaching%20Out&body=How%20are%20you" class="btn btn-lg btn-outline">
+                          <i class="fa fa-envelope"></i> Drop me a line
+                      </a>
+                    </div>
+                  </div>
                     <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
                     <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
-                    <form name="sentMessage" id="contactForm" novalidate>
+                    <!-- <form name="sentMessage" id="contactForm" novalidate>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
                                 <label for="name">Name</label>
@@ -249,7 +259,7 @@
                                 <button type="submit" class="btn btn-success btn-lg">Send</button>
                             </div>
                         </div>
-                    </form>
+                    </form> -->
                 </div>
             </div>
         </div>
