--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
                   <h4>Hit me up!</h4>
-                  <p>I'm always up for a coffee and discuss current projects</p>
+                  <p>I'm always up for a coffee and would love to discuss current projects.</p>
                   <div class="col-lg-4">
                     <div class="text-center">
                       <a href="mailto:james.p.anderson16@gmail.com?subject=Reaching%20Out&body=How%20are%20you" class="btn btn-lg btn-outline">
