--- a/index.html
+++ b/index.html
@@ -261,6 +261,16 @@
                     </form> -->
                 </div>
             </div>
+            <div class="row">
+                <div class="col-lg-4">
+                  <div class="text-center">
+                    <a href="mailto:james.p.anderson16@gmail.com?subject=Reaching%20Out&body=How%20are%20you" class="btn btn-lg btn-outline">
+                        <i class="fa fa-envelope"></i> Drop me a line
+                    </a>
+                  </div>
+                </div>
+            </div>
+        </div>
         </div>
     </section>
 
