--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
     </section>
 
     <!-- Contact Section -->
-    <section id="contact">
+    <section class="success" id="contact">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -213,7 +213,13 @@
                 <div class="col-lg-8 col-lg-offset-2">
                   <h4>Hit me up!</h4>
                   <p>I'm always up for a coffee and would love to discuss current projects.</p>
-                  <button type="button" name="button">Email me</button>
+                  <div class="col-lg-4">
+                    <div class="text-center">
+                      <a href="mailto:james.p.anderson16@gmail.com?subject=Reaching%20Out&body=How%20are%20you" class="btn btn-lg btn-outline">
+                          <i class="fa fa-envelope"></i> Drop me a line
+                      </a>
+                    </div>
+                  </div>
                     <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
                     <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
                     <!-- <form name="sentMessage" id="contactForm" novalidate>
@@ -253,6 +259,15 @@
                             </div>
                         </div>
                     </form> -->
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4">
+                  <div class="text-center">
+                    <a href="mailto:james.p.anderson16@gmail.com?subject=Reaching%20Out&body=How%20are%20you" class="btn btn-lg btn-outline">
+                        <i class="fa fa-envelope"></i> Drop me a line
+                    </a>
+                  </div>
                 </div>
             </div>
         </div>
