change order of page

--- a/index.html
+++ b/index.html
@@ -86,6 +86,47 @@
         </div>
     </header>
 
+    
+    <!-- About Section -->
+    <section id="about">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <h2>My Journey into Tech</h2>
+            <hr class="star-light">
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-4">
+            <img src="img/profile.jpg" class="img-rounded img-responsive" alt="">
+            <div class="text-center">
+              <a href="mailto:james.p.anderson16@gmail.com?subject=Reaching%20Out&body=How%20are%20you" class="btn btn-lg btn-outline">
+                <i class="fa fa-envelope"></i> Drop me a line
+              </a>
+            </div>
+          </div>
+          <div class="col-lg-8">
+            <p>I'm a software developer.</p>
+            <p>I currently live in Colorado but I'm originally from Oklahoma and I've been a fair few places in between.</p>
+            <p>My first foray into tech was way back in the MySpace days. I loved tinkering with my profile and adding angry teenager music in the background for all to enjoy once they landed on my page. It was fun, but I never really considered it a career. Fast-forward a good few years. After finishing my bachelors, I relocated to NYC and found myself working as a recruiter for C# and C++ developers. I spent my days making cold calls and trying to sell candidates whose skill sets I didn't fully comprehend.</p>
+            <p>"But James, we're just a mom and pop shop, what exactly would we need a C# developer for?"</p>
+            <p>"Well Bob, if you have to ask then you are <i>definitely</i> in need of one."</p>
+            <p>Again, the tech industry was knocking at my door but I didn't get it. The year was 2008, and I had front row seats as things came tumbling down. I decided to change gears, and got myself certified as a teacher from the University of Cambridge. I was on the next flight to Moscow, Russia where I spent the next two and a half years working as teacher. As my career progressed, I took a position in Dusseldorf, Germany as a linguistic consultant and later, on to Saudi Arabia as an advanced instructor.</p>
+            <p>For those of you who've never been to Saudi Arabia, their (web) infrastructure is somewhat lacking. One night, I was craving a pizza and for the life of me, could not find a single website or phone number to get one. I began to wonder to myself, <i>really? how hard can it be to make a website?</i> So, I decided to give it a try.</p>
+            <p>I did a few tutorials and started dabbling. I fell in love with code. It finally dawned on me that this could be real career. So, after looking for the longest, most-intense code school I could find, I got accepted to the Turing School in Denver and packed my bags.</p>
+            <p>*Pro Tip* Don't tell your significant other you're quitting your job and moving around the world 6 weeks after having a child.</p>
+            <p>I spent seven long months in a basement, putting in 12-14 hour days to learn the craft. Our time was measured in sprints and 7-11 runs. I had the opportunity to work with some remarkable people who changed the way I look at problems, and make really cool apps in the process. I went from not knowing how to create a new directory in the terminal to building multi-faceted, fully-tested, production-level web apps.</p>
+            <p>I now have a career that I love and cannot imagine myself ever doing anything else.</p>
+          </div>
+          <!-- <div class="col-lg-8 col-lg-offset-2 text-center">
+          <a href="mailto:james.p.anderson16@gmail.com?subject=Reaching%20Out&body=How%20are%20you" class="btn btn-lg btn-outline">
+          <i class="fa fa-envelope"></i> Drop me a line
+        </a>
+      </div> -->
+    </div>
+  </div>
+</section>
+
     <!-- Portfolio Grid Section -->
     <section id="portfolio">
         <div class="container">
@@ -156,46 +197,6 @@
                         <img src="img/portfolio/urlockbox.png" class="img-responsive" alt="Submarine">
                     </a>
                 </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- About Section -->
-    <section class="success" id="about">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2>My Journey into Tech</h2>
-                    <hr class="star-light">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-4">
-                  <img src="img/profile.jpg" class="img-rounded img-responsive" alt="">
-                  <div class="text-center">
-                    <a href="mailto:james.p.anderson16@gmail.com?subject=Reaching%20Out&body=How%20are%20you" class="btn btn-lg btn-outline">
-                        <i class="fa fa-envelope"></i> Drop me a line
-                    </a>
-                  </div>
-                </div>
-                <div class="col-lg-8">
-                    <p>I'm a software developer.</p>
-                    <p>I currently live in Colorado but I'm originally from Oklahoma and I've been a fair few places in between.</p>
-                    <p>My first foray into tech was way back in the MySpace days. I loved tinkering with my profile and adding angry teenager music in the background for all to enjoy once they landed on my page. It was fun, but I never really considered it a career. Fast-forward a good few years. After finishing my bachelors, I relocated to NYC and found myself working as a recruiter for C# and C++ developers. I spent my days making cold calls and trying to sell candidates whose skill sets I didn't fully comprehend.</p>
-                    <p>"But James, we're just a mom and pop shop, what exactly would we need a C# developer for?"</p>
-                    <p>"Well Bob, if you have to ask then you are <i>definitely</i> in need of one."</p>
-                    <p>Again, the tech industry was knocking at my door but I didn't get it. The year was 2008, and I had front row seats as things came tumbling down. I decided to change gears, and got myself certified as a teacher from the University of Cambridge. I was on the next flight to Moscow, Russia where I spent the next two and a half years working as teacher. As my career progressed, I took a position in Dusseldorf, Germany as a linguistic consultant and later, on to Saudi Arabia as an advanced instructor.</p>
-                    <p>For those of you who've never been to Saudi Arabia, their (web) infrastructure is somewhat lacking. One night, I was craving a pizza and for the life of me, could not find a single website or phone number to get one. I began to wonder to myself, <i>really? how hard can it be to make a website?</i> So, I decided to give it a try.</p>
-                    <p>I did a few tutorials and started dabbling. I fell in love with code. It finally dawned on me that this could be real career. So, after looking for the longest, most-intense code school I could find, I got accepted to the Turing School in Denver and packed my bags.</p>
-                    <p>*Pro Tip* Don't tell your significant other you're quitting your job and moving around the world 6 weeks after having a child.</p>
-                    <p>I spent seven long months in a basement, putting in 12-14 hour days to learn the craft. Our time was measured in sprints and 7-11 runs. I had the opportunity to work with some remarkable people who changed the way I look at problems, and make really cool apps in the process. I went from not knowing how to create a new directory in the terminal to building multi-faceted, fully-tested, production-level web apps.</p>
-                    <p>I now have a career that I love and cannot imagine myself ever doing anything else.</p>
-                </div>
-                <!-- <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="mailto:james.p.anderson16@gmail.com?subject=Reaching%20Out&body=How%20are%20you" class="btn btn-lg btn-outline">
-                        <i class="fa fa-envelope"></i> Drop me a line
-                    </a>
-                </div> -->
             </div>
         </div>
     </section>
