--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </div>
     </header>
 
-    
+
     <!-- About Section -->
     <section id="about">
       <div class="container">
@@ -128,7 +128,7 @@
 </section>
 
     <!-- Portfolio Grid Section -->
-    <section id="portfolio">
+    <section class="success" id="portfolio">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
