--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             <div class="row">
                 <div class="col-lg-4">
                   <img src="img/profile.jpg" class="img-rounded img-responsive" alt="">
-                  <div class="text-center">
+                  <div class="success text-center">
                     <a href="mailto:james.p.anderson16@gmail.com?subject=Reaching%20Out&body=How%20are%20you" class="btn btn-lg btn-outline">
                         <i class="fa fa-envelope"></i> Drop me a line
                     </a>
