--- a/index.html
+++ b/index.html
@@ -200,25 +200,6 @@
         </div>
     </section>
 
-    <!-- Resume Section -->
-    <section id="resume">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12 text-center">
-            <h2>Resume</h2>
-            <hr class="star-light">
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-12 text-center">
-            <iframe src="https://resume.creddle.io/embed/6woabnpfnu4"
-            width="850" height="1100" seamless></iframe>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- End resume section -->
-
     <!-- Contact Section -->
     <section class="success" id="contact">
         <div class="container">
@@ -294,6 +275,23 @@
     </section>
 <!-- End contact section -->
 
+    <!-- Resume Section -->
+    <section class="success" id="resume">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <h2>Resume</h2>
+            <hr class="star-light">
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <iframe src="https://resume.creddle.io/embed/6woabnpfnu4"
+              width="850" height="1100" seamless></iframe>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- Footer -->
     <footer class="text-center">
